noinst_LTLIBRARIES = libboost_mpi.la

libboost_mpi_la_SOURCES = src/broadcast.cpp \
    src/communicator.cpp \
    src/computation_tree.cpp \
    src/content_oarchive.cpp \
    src/environment.cpp \
    src/exception.cpp \
    src/graph_communicator.cpp \
    src/group.cpp \
    src/intercommunicator.cpp \
    src/mpi_datatype_cache.cpp \
    src/mpi_datatype_oarchive.cpp \
    src/packed_iarchive.cpp \
    src/packed_oarchive.cpp \
    src/packed_skeleton_iarchive.cpp \
    src/packed_skeleton_oarchive.cpp \
    src/point_to_point.cpp \
    src/request.cpp \
    src/text_skeleton_oarchive.cpp \
    src/timer.cpp

libboost_mpi_la_CXXFLAGS = @MPI_CXXFLAGS@
# libboost_mpi_la_LIBADD = @MPI_LDFLAGS@
