noinst_LIBRARIES = libboost_program_options.a

libboost_program_options_a_SOURCES = cmdline.cpp config_file.cpp \
	  options_description.cpp parsers.cpp positional_options.cpp \
          value_semantic.cpp variables_map.cpp \
	  utf8_codecvt_facet.cpp convert.cpp 

CXXFLAGS = $(AM_CPPFLAGS) @cxxflags@
