noinst_LTLIBRARIES = libboost_program_options.la

AM_CPPFLAGS = -I$(top_srcdir)/boost/

libboost_program_options_la_SOURCES = src/cmdline.cpp \
src/config_file.cpp \
src/convert.cpp \
src/options_description.cpp \
src/parsers.cpp \
src/positional_options.cpp \
src/split.cpp \
src/utf8_codecvt_facet.cpp \
src/value_semantic.cpp \
src/variables_map.cpp \
src/winmain.cpp
