program_options_sources = ['src/cmdline.cpp',
			   'src/config_file.cpp',
			   'src/convert.cpp',
			   'src/options_description.cpp',
			   'src/parsers.cpp',
			   'src/positional_options.cpp',
			   'src/split.cpp',
			   'src/utf8_codecvt_facet.cpp',
			   'src/value_semantic.cpp',
			   'src/variables_map.cpp',
			   'src/winmain.cpp']

boost_libs += static_library('boost_program_options', program_options_sources,
			include_directories: boost_inc)
